--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-document": "^3.6.5",
+    "@tiptap/extension-heading": "^3.6.5",
+    "@tiptap/extension-image": "^3.6.5",
+    "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-paragraph": "^3.6.5",
+    "@tiptap/extension-table": "^3.6.5",
+    "@tiptap/extension-table-cell": "^3.6.5",
+    "@tiptap/extension-table-header": "^3.6.5",
+    "@tiptap/extension-table-row": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.7",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
     "heroicons": "^2.2.0",
