--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-dojolab",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-code-block-lowlight": "^3.6.5",
     "@tiptap/extension-document": "^3.6.5",
     "@tiptap/extension-heading": "^3.6.5",
+    "@tiptap/extension-highlight": "^3.6.5",
     "@tiptap/extension-image": "^3.6.5",
     "@tiptap/extension-link": "^3.6.5",
     "@tiptap/extension-paragraph": "^3.6.5",
@@ -18,6 +20,8 @@
     "@tiptap/extension-table-cell": "^3.6.5",
     "@tiptap/extension-table-header": "^3.6.5",
     "@tiptap/extension-table-row": "^3.6.5",
+    "@tiptap/extension-text-align": "^3.6.5",
+    "@tiptap/extension-text-style": "^3.6.5",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "clsx": "^2.1.1",
@@ -25,6 +29,7 @@
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
     "heroicons": "^2.2.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
