--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "dompurify": "^3.2.7",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.16",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
     "uuid": "^13.0.0"
   },
@@ -40,6 +42,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
