--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
+    "react-pdf": "^10.1.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
