--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-dojolab",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,19 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-blockquote": "^3.6.6",
+    "@tiptap/extension-bullet-list": "^3.6.6",
     "@tiptap/extension-code-block-lowlight": "^3.6.5",
+    "@tiptap/extension-color": "^3.6.6",
     "@tiptap/extension-document": "^3.6.5",
     "@tiptap/extension-heading": "^3.6.5",
-    "@tiptap/extension-highlight": "^3.6.5",
+    "@tiptap/extension-highlight": "^3.6.6",
     "@tiptap/extension-image": "^3.6.5",
     "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-list-item": "^3.6.6",
+    "@tiptap/extension-ordered-list": "^3.6.6",
     "@tiptap/extension-paragraph": "^3.6.5",
     "@tiptap/extension-table": "^3.6.5",
     "@tiptap/extension-table-cell": "^3.6.5",
     "@tiptap/extension-table-header": "^3.6.5",
     "@tiptap/extension-table-row": "^3.6.5",
     "@tiptap/extension-text-align": "^3.6.5",
-    "@tiptap/extension-text-style": "^3.6.5",
+    "@tiptap/extension-text-style": "^3.6.6",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "clsx": "^2.1.1",
