--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "uuid": "^13.0.0"
   },
